--- a/templates/grocery/profile.html
+++ b/templates/grocery/profile.html
@@ -29,7 +29,7 @@
                     <a href="{% url 'orders' %}" class="list-group-item list-group-item-action py-3 border-0 active-menu">
                         <i class="bi bi-bag-heart me-3 fs-5"></i> My Orders
                     </a>
-                    <a href="{% url 'freshwallet' %}" class="list-group-item list-group-item-action py-3 border-0">
+                    <a href="{% url 'fresh_mart_wallet' %}" class="list-group-item list-group-item-action py-3 border-0">
                         <i class="bi bi-wallet2 me-3 fs-5 text-warning"></i> Fresh Mart Wallet
                     </a>
                     <a href="{% url 'wishlist' %}" class="list-group-item list-group-item-action py-3 border-0">
